--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,20 @@
 
 .clearfix:after {
   content: " ";
-  display: block;
+  display: table;
   clear: both;
 }
 
 .wrapper {
-  width: 80%;
+  max-width: 1525px;
   margin: 0 auto;
+}
+
+@media (max-width: 1550px) {
+  .wrapper {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 body {
@@ -29,6 +36,14 @@ ul {
 
 /****************   LOGO AND NAVIGATION   ****************/
 #navigation {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: space-between;
+  -ms-align-items: center;
+  align-items: center;
   height: 100px;
   border-bottom: 1px solid  #6e6e6e;
 }
@@ -38,11 +53,15 @@ ul {
   color: #3e3e3e;
 }
 
-.logo,
-.main-nav {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+@media (max-width: 567px) {
+  #navigation {
+    justify-content: center;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -o-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
 }
 
 .fa-diamond {
@@ -70,10 +89,26 @@ ul {
   color: #3e3e3e;
 }
 
+@media (max-width: 407px) {
+  .main-nav a {
+   font-size: 14px;
+   margin-right: 10px;
+   margin-left: 10px;
+  }
+}
+
 .main-nav a:last-child {  margin-right: 0; }
 
 .main-nav a:hover {
   color: #ef96a8;
+}
+
+@media (max-width: 567px) {
+  .main-nav {
+    position: static;
+    clear: both;
+    float: none;
+  }
 }
 
 
@@ -83,6 +118,12 @@ ul {
   padding-top: 60px;
   padding-bottom: 40px;
   text-align: center;
+}
+
+@media (max-width: 950px) {
+  #main-header {
+    padding-bottom: 20px;
+  }
 }
 
 .myname { color: #ef96a8; }
@@ -113,15 +154,40 @@ ul {
 /****************   ABOUT AND WORK SUMMARY   ****************/
 #about { margin-bottom: 60px; }
 
+.about-wrap {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  -o-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
 .about-me {
   display: inline-block;
   width: 47%;
-  margin-right: 5%;
   margin-bottom: 40px;
 }
 
-.about-me + .about-me {
-  margin-right: 0;
+@media (max-width: 950px) {
+  .about-wrap {
+    display: block;
+    margin-bottom: 60px;
+  }
+
+  .about-me {
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+
 }
 
 .about-me h2 {
@@ -139,23 +205,24 @@ ul {
 
 /****************   IMAGE PORTFOLIO   ****************/
 .portfolio-list {
-  width: 95%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 96%;
   margin-right: auto;
   margin-left: auto;
 }
 
+
 .portfolio-item {
   position: relative;
-  float: left;
+  display: inline-block;
   height: 250px;
-  margin-right: 1.78%;
-  margin-right: 1.78%;
+  margin-bottom: 30px;
+  margin-right: 15px;
+  margin-left: 15px;
   border-radius: 17px;
   background-color: #000;
-}
-
-.portfolio-item:nth-child(n+6) {
-  margin-top: 20px;
 }
 
 a .img-disc {
@@ -216,7 +283,14 @@ a:hover img {
   color: #ef96a8;
 }
 
+@media (max-width: 1497px) {
+  .thanks {
+    margin-top: 20px;
+  }
+}
 
+
+/****************   FOOTER   ****************/
 footer {
   padding-top: 60px;
   padding-bottom: 30px;
@@ -240,6 +314,13 @@ footer h2 {
 form {
   float: left;
   width: 40%;
+}
+
+@media (max-width: 1050px) {
+  form {
+    float: none;
+    width: 100%;
+  }
 }
 
 fieldset {
@@ -296,4 +377,14 @@ button {
   font-size: 20px;
   text-align: center;
   padding: 10px;
+}
+
+@media (max-width: 1050px) {
+  .social {
+    position: static;
+    clear: both;
+    width: 100%;
+    margin-top: 30px;
+    text-align: right;
+  }
 }
